@@ -815,5 +815,5 @@ END
 
 STRINGTABLE
 BEGIN
-  IDS_INVALIDEXPIRYDATE    "Cannot set a password expiry date in the past."
+  IDS_INVALIDEXPIRYDATE    "You may not set a password expiry date in the past."
 END
